force-app/main/default/objects/InventoryItem__c/InventoryItem__c.object-meta.xml
<CustomObject>
    <description>Inventory Representation of Products</description>
    <label>Inventory Item</label>
    <nameField>
        <displayFormat>RI-{0000000}</displayFormat>
        <label>Inventory ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>