force-app/main/default/objects/InventoryItem__c/fields/InventoryCount__c.field-meta.xml
<CustomField>
    <fullName>InventoryCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The Total number of items in inventory</description>
    <inlineHelpText>The Total number of items in inventory</inlineHelpText>
    <label>Inventory Count</label>
    <precision>15</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>