force-app/main/default/objects/InventoryItem__c/fields/InventoryQRCode__c.field-meta.xml
<CustomField>
    <fullName>InventoryQRCode__c</fullName>
    <description>QR Code for the inventory item.</description>
    <formula>IMAGE(&quot;https://api.qrserver.com/v1/create-qr-code/?data=&quot; +  Id, &quot;QR Code For &quot; +  RentalProduct__r.Name + &quot; at &quot; +  Location__r.Name, 200, 200)</formula>
    <inlineHelpText>QR Code for the inventory item.</inlineHelpText>
    <label>Inventory QR Code</label>
    <type>Text</type>
</CustomField>