force-app/main/default/objects/InventoryItem__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>The Location of the Inventory Item</description>
    <inlineHelpText>The Location of the Inventory Item</inlineHelpText>
    <label>Location</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only relate inventory to RentAll Locations</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>RentAll Location</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>LocationInventory</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>