force-app/main/default/objects/InventoryItem__c/fields/LocationName__c.field-meta.xml
<CustomField>
    <fullName>LocationName__c</fullName>
    <description>the name of the Location</description>
    <formula>Location__r.Name</formula>
    <inlineHelpText>the name of the Location</inlineHelpText>
    <label>Location Name</label>
    <type>Text</type>
</CustomField>