force-app/main/default/objects/InventoryItem__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <defaultValue>&quot;Auto Populated&quot;</defaultValue>
    <description>The Name of the Rental Product associated with the Inventory Item.  Automatically populated by System.</description>
    <inlineHelpText>The Name of the Rental Product associated with the Inventory Item.  Automatically populated by System.</inlineHelpText>
    <label>Product Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>