force-app/main/default/objects/InventoryItem__c/fields/RentalProduct__c.field-meta.xml
<CustomField>
    <fullName>RentalProduct__c</fullName>
    <description>The Product of the Inventory Item</description>
    <inlineHelpText>The product of the inventory line.</inlineHelpText>
    <label>Rental Product</label>
    <referenceTo>RentalProduct__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>