force-app/main/default/objects/InventoryItem__c/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The Serial Number of the product if it is serializable.</description>
    <externalId>true</externalId>
    <inlineHelpText>The Serial Number of the product if it is serializable.</inlineHelpText>
    <label>Serial Number</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>