force-app/main/default/objects/InventoryItem__c/fields/UnitRentalPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitRentalPrice__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Rental Price Per Unit</description>
    <inlineHelpText>Rental Price Per Unit</inlineHelpText>
    <label>Unit Rental Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>