force-app/main/default/objects/InventoryItem__c/validationRules/EnforceInventorySerialization.validationRule-meta.xml
<ValidationRule>
    <fullName>EnforceInventorySerialization</fullName>
    <active>true</active>
    <description>Inventory related to a product that is marked as serializable must only have a count of 1 and must have a serial number</description>
    <errorConditionFormula>IF(RentalProduct__r.SerializedTracking__c == TRUE &amp;&amp; ( InventoryCount__c &gt; 1 ||  ISBLANK( SerialNumber__c )),TRUE,FALSE )</errorConditionFormula>
    <errorMessage>When a product is serializable, the inventory count must be one and a serial number of the item must be provided</errorMessage>
</ValidationRule>