force-app/main/default/objects/InventoryItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RentalProduct__c</columns>
    <columns>Location__c</columns>
    <columns>InventoryCount__c</columns>
    <columns>SerialNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>